force-app/main/default/objects/AIPIIRegistry__c/AIPIIRegistry__c.object-meta.xml
<CustomObject>
    <description>Parent record per object monitored for PII field classification, synced from Salesforce Data Classification in the background so runtime masking never depends on a live callout.</description>
    <label>AI PII Registry</label>
    <nameField>
        <label>AI PII Registry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>🛡️ AI PII Registry Entries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>