force-app/main/default/objects/AIPIIRegistry__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the dispatcher includes this object.</description>
    <inlineHelpText>Turn this off to pause syncing without deleting the record.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>