force-app/main/default/objects/AIPIIRegistry__c/fields/CacheResetDate__c.field-meta.xml
<CustomField>
    <fullName>CacheResetDate__c</fullName>
    <description>When set to today or earlier, forces a full resync on the next dispatcher run.</description>
    <inlineHelpText>Set this to force an out-of-cycle resync, such as after a classification change in Setup.</inlineHelpText>
    <label>Cache Reset Date</label>
    <type>Date</type>
</CustomField>