force-app/main/default/objects/AIPIIRegistry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Why this object is in scope.</description>
    <inlineHelpText>Note which agents or data sources rely on this object, for future reference.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>