force-app/main/default/objects/AIPIIRegistry__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>A unique, code-friendly identifier for this record, generated automatically.</description>
    <inlineHelpText>This field fills in automatically and doesn&apos;t need to be entered manually.</inlineHelpText>
    <label>Developer Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>