force-app/main/default/objects/AIPIIRegistry__c/fields/FieldCount__c.field-meta.xml
<CustomField>
    <fullName>FieldCount__c</fullName>
    <description>The total number of classified fields synced for this object.</description>
    <inlineHelpText>Maintained automatically via the master-detail relationship.</inlineHelpText>
    <label>Field Count</label>
    <summaryForeignKey>AIPIIFieldMetadata__c.PIIRegistry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>