force-app/main/default/objects/AIPIIRegistry__c/fields/LastSynced__c.field-meta.xml
<CustomField>
    <fullName>LastSynced__c</fullName>
    <description>When this object was last successfully synced.</description>
    <inlineHelpText>Updated automatically after each successful sync.</inlineHelpText>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>