force-app/main/default/objects/AIPIIRegistry__c/fields/MaxFieldsToQuery__c.field-meta.xml
<CustomField>
    <fullName>MaxFieldsToQuery__c</fullName>
    <description>Caps how many fields the sync considers for this object.</description>
    <inlineHelpText>Set a ceiling to bound the size of each sync run for this object.</inlineHelpText>
    <label>Max Fields To Query</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>