force-app/main/default/objects/AIPIIRegistry__c/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>The object to sync PII field classification for.</description>
    <inlineHelpText>Enter the exact object API name, such as Opportunity.</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>