force-app/main/default/objects/AIPIIRegistry__c/fields/PublicId__c.field-meta.xml
<CustomField>
    <fullName>PublicId__c</fullName>
    <description>A stable external identifier for this record, generated automatically and used by external systems to reference it without relying on the Salesforce record Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field fills in automatically. Use this value if another system needs to reference this registry entry directly.</inlineHelpText>
    <label>Public Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>