force-app/main/default/objects/AIPIIRegistry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>Active__c</columns>
    <columns>SyncStatus__c</columns>
    <columns>FieldCount__c</columns>
    <columns>LastSynced__c</columns>
    <columns>MaxFieldsToQuery__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>